--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -148,6 +148,24 @@
                 android:background="@color/viewcolor"
                 android:layout_marginBottom="@dimen/_2sdp"
                 android:layout_marginTop="@dimen/_13sdp"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTeam"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
+        <TextView
+            android:id="@+id/noBrandsTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_34sdp"
+            android:layout_marginBottom="@dimen/_100sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:gravity="center"
+            android:text="No Team Members Found"
+            android:textColor="@color/light_gray"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="gone" />
     </androidx.cardview.widget.CardView>
+
+
 </LinearLayout>
