--- a/app/src/main/res/layout/activity_company_info_details.xml
+++ b/app/src/main/res/layout/activity_company_info_details.xml
@@ -39,13 +39,17 @@
             android:textSize="@dimen/_16ssp" />
 
     </LinearLayout>
-
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        >
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginEnd="@dimen/_11sdp"
         app:cardCornerRadius="@dimen/_10sdp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -246,7 +250,9 @@
 
                 />
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
+    </ScrollView>
 
 </LinearLayout>
