--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -185,6 +185,7 @@
         </LinearLayout>
 
         <ScrollView
+            android:id="@+id/profileSV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none">
