--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -57,7 +57,7 @@
                             android:id="@+id/tv_user_icon_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
+                            android:layout_gravity="center"
                             android:fontFamily="@font/opensans_bold"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_20sdp"
