--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -22,10 +22,17 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_back" />
+            <LinearLayout
+                android:id="@+id/bpCloseLL"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_back" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <TextView
