--- a/app/src/main/res/layout/activity_company_info_details.xml
+++ b/app/src/main/res/layout/activity_company_info_details.xml
@@ -7,7 +7,15 @@
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
     tools:context=".view.business.CompanyInfoDetails">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginBottom="@dimen/_20sdp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,10 +47,7 @@
             android:textSize="@dimen/_16ssp" />
 
     </LinearLayout>
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        >
+
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -105,14 +110,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginEnd="@dimen/_11sdp"
-        app:cardCornerRadius="@dimen/_10sdp">
+        app:cardCornerRadius="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_20sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingLeft="@dimen/_11sdp"
-            android:paddingRight="@dimen/_11sdp">
+            android:paddingRight="@dimen/_11sdp"
+            >
 
             <LinearLayout
                 android:id="@+id/emailLL"
@@ -252,7 +259,6 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
+</LinearLayout>
     </ScrollView>
-
 </LinearLayout>
