--- a/app/src/main/res/layout/activity_edit_email2.xml
+++ b/app/src/main/res/layout/activity_edit_email2.xml
@@ -19,11 +19,16 @@
             android:paddingTop="@dimen/_44sdp"
             android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_back"
-            />
+            <LinearLayout
+                android:id="@+id/bpCloseLL"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_back" />
+            </LinearLayout>
 
         <TextView
             android:id="@+id/editTitle"
